--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -7,6 +7,6 @@
 
 {% block content %}
 <img src="{% static 'img/site-logo.svg' %}" alt="Site Logo">
-<h1>A Sudoku experience for Sudoku players.</h1>
-<h2>Coming soon!</h2>
+<h1>Create and play Sudoku puzzles.</h1><h2>A solving experience for Sudoku players, by Sudoku players.</h2>
+<a href="play/" class="button secondary">Play now! (beta)</a>
 {% endblock content %}
