--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -13,6 +13,8 @@
             gtag('config', 'G-T6782FZYPB');
         </script>
         <link href="{% static 'css/base_styles.css' %}" rel="stylesheet">
+        <meta charset="utf-8">
+        <meta name="description" content="A solve experience for Sudoku enthusiasts, created by Geoff Mackey.">
         {%block head %}{% endblock %}
     </head>
     <body>
