--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -371,6 +371,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 gameState = puzzleSetData.split('');
                 localStorage.setItem('puzzleData', gameState);
                 activeGame = true;
+                localStorage.removeItem('puzzleHistory');
                 exitCreateMode();
             } else {
                 displayErrorMessage(errors.INVALID_PUZZLE);
