--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -15,6 +15,8 @@
         <link href="{% static 'css/base_styles.css' %}" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="description" content="A solve experience for Sudoku enthusiasts, created by Geoff Mackey.">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1439214829781391"
+     crossorigin="anonymous"></script>
         {%block head %}{% endblock %}
     </head>
     <body>
