--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>sudo-koo: A Sudoku solve experience for Sudoku enthusiasts.</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-T6782FZYPB"></script>
         <script>
