--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -16,8 +16,22 @@
         <link href="{% static 'css/base_styles.css' %}" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="description" content="A solve experience for Sudoku enthusiasts, created by Geoff Mackey.">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1439214829781391"
-     crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1439214829781391" crossorigin="anonymous"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17121242011"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'AW-17121242011');
+        </script>
+        <!-- Google tag (gtag.js) event -->
+        <script>
+        gtag('event', 'ads_conversion_PAGE_VIEW_1', {
+            // <event_parameters>
+        });
+        </script>
         {%block head %}{% endblock %}
     </head>
     <body>
