--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -15,7 +15,7 @@
         </script>
         <link href="{% static 'css/base_styles.css' %}" rel="stylesheet">
         <meta charset="utf-8">
-        <meta name="description" content="A solve experience for Sudoku enthusiasts, created by Geoff Mackey.">
+        <meta name="description" content="A solve experience for Sudoku enthusiasts. Create and solve your own puzzles!">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1439214829781391" crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17121242011"></script>
