--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -9,4 +9,14 @@
 <img src="{% static 'img/site-logo.svg' %}" alt="Site Logo">
 <h1>Create and play Sudoku puzzles.</h1><h2>A solving experience for Sudoku players, by Sudoku players.</h2>
 <a href="play/" class="button secondary">Play now! (beta)</a>
+<section class="news">
+    <h3>Upcoming features:</h3>
+    <ul>
+        <li>Puzzle timer with pause and restart functions</li>
+        <li>Color palette selection tool (right now you must type a number 1-9 to apply a color)</li>
+        <li>Auto-import puzzles from the New York Times and other sources</li>
+        <li>Personal accounts to save puzzles and track your solve stats</li>
+        <li>Sudoku variant modes like "knight's move" or "king's move"</li>
+    </ul>
+</section>
 {% endblock content %}
