--- a/home/static/css/home_styles.css
+++ b/home/static/css/home_styles.css
@@ -21,7 +21,12 @@ div.sign-buttons {
 section.news {
     padding-top: 48px;
     text-align: left;
-    width: 500px;
+    width: 565px;
     line-height: 28px;
     margin: 0 auto;
+}
+
+h3.recent-features {
+    border-left: 5px solid #FF0099;
+    padding-left: 8px;
 }
