--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -1981,7 +1981,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <a href="#" id="middle-control" class="game-control" style="background: url({% static 'img/middle-control.svg' %}) center bottom no-repeat;"></a>
         <a href="#" id="color-control" class="game-control" style="background: url({% static 'img/color-control.svg' %}) center no-repeat;"></a>
         <a href="#" id="create-button" class="game-control" style="background: url({% static 'img/create-button.svg' %}) 50% 48% no-repeat; width: 130px;"></a>
-        <a href="#" id="import-button" class="game-control" style="background: url({% static 'img/import-button.svg' %}) 50% 53% no-repeat; width: 130px;"></a>
+        <!-- <a href="#" id="import-button" class="game-control" style="background: url({% static 'img/import-button.svg' %}) 50% 53% no-repeat; width: 130px;"></a> -->
         <a href="#" id="play-button" class="game-control" style="background: url({% static 'img/play-button.svg' %}) center no-repeat; width: 130px; display: none;"></a>
         <a href="#" id="cancel-button" class="game-control" style="background: url({% static 'img/cancel-button.svg' %}) 50% 45% no-repeat; width: 130px; display: none;"></a>
     </div>
