--- a/sudokoo/templates/base.html
+++ b/sudokoo/templates/base.html
@@ -16,6 +16,7 @@
         <link href="{% static 'css/base_styles.css' %}" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="description" content="A solve experience for Sudoku enthusiasts. Create and solve your own puzzles!">
+        <meta name="google-adsense-account" content="ca-pub-1439214829781391">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1439214829781391" crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17121242011"></script>
