--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -12,13 +12,14 @@
 <section class="news">
     <h3 class="recent-features">Recently added features:</h3>
         <ul>
-            <li>Auto-import puzzles from the New York Times (added 5.30.2025)</li>
+            <li>Create your own puzzle!</li>
         </ul>
     <h3>Upcoming features:</h3>
     <ul>
+        <li>Auto-import puzzles from various free sources</li>
         <li>Puzzle timer with pause and restart functions</li>
         <li>Color palette selection tool (right now you must type a number 1-9 to apply a color)</li>
-        <li>Auto-import puzzles from other sources or file upload</li>
+        <li>Auto-import puzzles from file upload or images (maybe?)</li>
         <li>Personal accounts to save puzzles and track your solve stats</li>
         <li>Sudoku variant modes like "knight's move" or "king's move"</li>
     </ul>
