--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -12,7 +12,7 @@
 <section class="news">
     <h3 class="recent-features">Recently added features:</h3>
         <ul>
-            <li>Create your own puzzle!</li>
+            <li>Auto-generate puzzles of different difficultites (added 5.31.2025)</li>
         </ul>
     <h3>Upcoming features:</h3>
     <ul>
